Fix: style fixes Feat: new layout for branches

--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
   "license": "MIT",
   "authors": [
     {
-      "email": "jared@upstatement.com",
-      "name": "jarednova"
+      "email": "me@shibitov.ru",
+      "name": "Yury Shibitov"
     }
   ],
   "repositories": [
